--- a/layouts/partials/treenav.html
+++ b/layouts/partials/treenav.html
@@ -10,13 +10,14 @@
         {{- $lastpage = (slice "/purpose/" "/user/basic/" "/user/mobile/" "/user/personal/" "/admin/spec/") }}
     {{- else if eq $.Site.Params.product "Mailwise" }}
         {{- $lastpage = (slice "/user/basic/" "/user/personal/" "/admin/spec/" "/admin/system/" "/option/migration/" "/intro/first/" "/intro/install/" "/intro/verup/" "/intro/uninstall/") }}
+    {{- else if eq $.Site.Params.product "Office" }}
+        {{- $lastpage = (slice "/intro/first/" "/guide/" "/pdf/") }}
     {{- end }}
     {{- range $lastpage }}
         {{- if in $.RelPermalink . }}
             {{- $islastsect = true }}
         {{- end }}
     {{- end }}
-    
     {{- $link1  := "" }}
     {{- $title1 := . }}
     {{- $link2  := "" }}
@@ -24,7 +25,7 @@
     
     {{- $parenttree := false }}
     
-    {{- if or (eq $.Site.Params.product "Garoon") (eq $.Site.Params.product "Mailwise") }}
+    {{- if or (eq $.Site.Params.product "Garoon") (eq $.Site.Params.product "Mailwise") (eq $.Site.Params.product "Office")}}
         {{- $needtoc = true }}
         {{- if in .RelPermalink "/application.html" }}
             {{- $needtoc = false }}
