--- a/layouts/partials/breadcrumb.html
+++ b/layouts/partials/breadcrumb.html
@@ -15,7 +15,7 @@
             {{- partial "title" .p1 -}}
         {{- else -}}
         <a href="{{- .p1.Permalink -}}">
-            {{- if and (.p1.IsHome) (or (eq .p1.Site.Params.product "Garoon") (eq .p1.Site.Params.product "Mailwise")) -}}
+            {{- if and (.p1.IsHome) (or (eq .p1.Site.Params.product "Garoon") (eq .p1.Site.Params.product "Mailwise") (eq .p1.Site.Params.product "Office")) -}}
                 {{- i18n "Top_page" -}}
             {{- else -}}
                 {{- partial "title" .p1 -}}
