--- a/layouts/print_page/single.html
+++ b/layouts/print_page/single.html
@@ -390,6 +390,16 @@
                         {{- else if eq $weight 400 -}}
                             {{- $targeturl = (printf "/%s/%s/option" $prod $lang) -}}
                         {{- end -}}
+                    {{- else if eq $product "Office" -}}
+                        {{- $prod := "o" }}
+                        {{- if eq $serviceType "on-premise" }}
+                            {{- $prod = "of10" }}
+                        {{- end }}
+                        {{- if eq $weight 200 -}}
+                            {{- $targeturl = (printf "/%s/%s/admin" $prod $lang) -}}
+                        {{- else if eq $weight 300 -}}
+                            {{- $targeturl = (printf "/%s/%s/user" $prod $lang) -}}
+                        {{- end -}}
                     {{- end -}}
 
                     {{- if ne $targeturl "" }}
