--- a/layouts/shortcodes/hint.html
+++ b/layouts/shortcodes/hint.html
@@ -1,7 +1,7 @@
 {{- $_hugo_config := `{ "version": 1 }` -}}
 <aside class="admonition hint">
   <div class="admonition-alt">
-{{- if and (ne .Site.Params.product "Garoon") (ne .Site.Params.product "Mailwise") }}
+{{- if and (ne .Site.Params.product "Garoon") (ne .Site.Params.product "Mailwise") (ne .Site.Params.product "Office") }}
     <i class="fas fa-lightbulb" aria-hidden="true"></i>
 {{- end }}
     <span class="admonition-alt-text">{{ i18n "Title_tips" }}</span>
