--- a/layouts/print_page/single.html
+++ b/layouts/print_page/single.html
@@ -395,10 +395,14 @@
                         {{- if eq $serviceType "on-premise" }}
                             {{- $prod = "of10" }}
                         {{- end }}
-                        {{- if eq $weight 200 -}}
+                        {{- if eq $weight 100 -}}
+                            {{- $targeturl = (printf "/%s/%s/intro" $prod $lang) -}}
+                        {{- else if eq $weight 200 -}}
                             {{- $targeturl = (printf "/%s/%s/admin" $prod $lang) -}}
                         {{- else if eq $weight 300 -}}
                             {{- $targeturl = (printf "/%s/%s/user" $prod $lang) -}}
+                        {{- else if eq $weight 400 -}}
+                            {{- $targeturl = (printf "/%s/%s/option" $prod $lang) -}}
                         {{- end -}}
                     {{- end -}}
 
