z-indexの指定を1カ所にまとめる

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -755,8 +755,6 @@ ul.breadcrumbs {
     margin-bottom: 24px;
     margin-top: -24px;
     padding-top: 66px;
-    position: relative; /* z-indexの指定のため */
-    z-index: -1; /* マイナスのマージンが見出しの直前の要素をクリック不能にしてしまう問題への対処 */
 }
 .article h3 {
     font-size: 1.6rem;
@@ -764,8 +762,6 @@ ul.breadcrumbs {
     margin-bottom: 15px;
     margin-top: -36px;
     padding-top: 66px;
-    position: relative; /* z-indexの指定のため */
-    z-index: -1; /* マイナスのマージンが見出しの直前の要素をクリック不能にしてしまう問題への対処 */
 }
 .article h4 {
     font-size: 1.4rem;
@@ -773,8 +769,6 @@ ul.breadcrumbs {
     margin-bottom: 12px;
     margin-top: -36px;
     padding-top: 66px;
-    position: relative; /* z-indexの指定のため */
-    z-index: -1; /* マイナスのマージンが見出しの直前の要素をクリック不能にしてしまう問題への対処 */
 }
 .article h5 {
     font-size: 1.2rem;
@@ -783,8 +777,6 @@ ul.breadcrumbs {
     margin-top: -42px;
     padding-top: 66px;
     font-weight: 700;
-    position: relative; /* z-indexの指定のため */
-    z-index: -1; /* マイナスのマージンが見出しの直前の要素をクリック不能にしてしまう問題への対処 */
 }
 .article h6 {
     font-size: 1.0rem;
@@ -793,9 +785,13 @@ ul.breadcrumbs {
     margin-top: -48px;
     padding-top: 66px;
     font-weight: 700;
-    position: relative; /* z-indexの指定のため */
-    z-index: -1; /* マイナスのマージンが見出しの直前の要素をクリック不能にしてしまう問題への対処 */
 }
+.article h2,.article h3,.article h4,.article h5,.article h6 {
+    /* マイナスのマージンが見出しの直前の要素をクリック不能にしてしまう問題への対処 */
+    position: relative;
+    z-index: -1;
+}
+
 .article blockquote {
     border-left: 2px solid rgba(0,0,0,.54);
     color: rgba(0,0,0,.54);
