--- a/static/stylesheets/custom_mw.css
+++ b/static/stylesheets/custom_mw.css
@@ -19,7 +19,7 @@ a,
 }
 
 .logo-wrap {
-    width: 350px;
+    width: 110px;
 }
 .header .searchbox input[type=text]{
     border: 4px solid #d0324b;
@@ -114,6 +114,10 @@ a,
 
 
 @media only screen and (min-width: 768px) {
+    .logo-wrap {
+        width: 350px;
+    }
+
     .g-col {
         width: 25%;
     }
