--- a/layouts/partials/treenav2.html
+++ b/layouts/partials/treenav2.html
@@ -4,7 +4,7 @@
     </div>
     <nav id="tree-main" role="tree">
         <ul>
-            <li data-jstree='{ "opened" : true }'>
+            <li class="dummy-node" data-jstree='{ "opened" : true, "disabled" : true }'>
                 {{- $tocs := "" }}
                 {{- $cont := .Content }}
                 {{- $tocs = findRE "<h2.*?>(.|\n)*?</h2>" $cont }}
@@ -37,7 +37,7 @@
                             {{- $txt = (strings.TrimPrefix ">" $txt ) }}
                             {{- $txt = (strings.TrimSuffix "<" $txt ) }}
 
-                         <li><a href="{{$pageurl}}#{{$anc}}">{{$txt}}</a></li>
+                         <li><a href="{{$pageurl}}#{{$anc}}" class="toclink">{{$txt}}</a></li>
                         {{- end }}
                 </ul>
                     {{- end }}
