--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -54,6 +54,7 @@
 </div>
 {{- partial "gototop" . }}
 {{- partial "footer" . }}
+{{- if eq $.Site.Params.product "kintone" }}{{ partial "yahootagmanager" . }}{{- end }}
 {{- end }}
 </body>
 </html>
