--- a/layouts/index.html
+++ b/layouts/index.html
@@ -35,6 +35,6 @@
     <script src="https://www.gstatic.com/prose/brand.js" targetId="logo_place" hl="{{$glang}}"></script>
     {{- end }}
     {{- partial "footer" . }}
-    {{- if eq $.Site.Params.product "kintone" }}{{ partial "yahootagmanager" . }}{{- end }}
+{{- if and (eq $.Site.Params.product "kintone") (eq $.Site.Params.TargetRegion "JP") }}{{ partial "yahootagmanager" . }}{{- end }}
 </body>
 </html>
