--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -39,6 +39,7 @@
 </div>
 {{- partial "gototop" . }}
 {{- partial "footer" . }}
+{{- if and (eq $.Site.Params.product "kintone") (eq $.Site.Params.TargetRegion "JP") }}{{ partial "yahootagmanager" . }}{{- end }}
 {{- end }}
 </body>
 </html>
