add a thumbnail meta tag

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -43,6 +43,7 @@
     <meta name="robots" content="noindex">
     {{- end }}
     <meta name="description" content="{{$desc}}">
+    <meta name="thumbnail" content="https://{{.Site.Params.domain}}{{ .Site.Params.og_img | relURL }}">
     <meta property="og:url" content="https://{{.Site.Params.domain}}{{.Permalink | relURL }}">
     {{- if .IsHome}}
     <meta property="og:type" content="website">
