--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,7 +3,7 @@
   <head>
     {{- $buildnum := (now.Format "2006010203") }}
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=11" />
     {{- $title := partial "title" .}}
     {{- $sitename := "" }}
@@ -74,13 +74,14 @@
 
     <link rel="stylesheet" href="{{ printf "%s?%s" "stylesheets/application.css" $buildnum | relURL }}">
     <link rel="stylesheet" href="{{ "stylesheets/zoom.css" | relURL }}">
-    <link rel="stylesheet" href="https://js.cybozu.com/font-awesome/v5.0.13/css/fontawesome-all.min.css">
+    <!--link rel="stylesheet" href="https://js.cybozu.com/font-awesome/v5.0.13/css/fontawesome-all.min.css"-->
+    <script src="https://kit.fontawesome.com/5b68479252.js" crossorigin="anonymous"></script>
     {{- if .IsHome}}
     <link rel="stylesheet" href="{{ printf "%s?%s" "stylesheets/home.css" $buildnum | relURL }}">
     {{- end }}
     {{- if eq .Params.type "search_result"}}
     <link rel="stylesheet" href="{{ printf "%s?%s" "stylesheets/search_result.css" $buildnum | relURL }}">
-        {{- if ne $.Site.Params.google_search true -}}
+        {{- if ne .Site.Params.google_search true -}}
     <link href="//c.marsflag.com/mf/mfx/css/mfx-serp.css" rel="stylesheet" type="text/css" media="all" charset="UTF-8">
     <link rel="stylesheet" href="{{ printf "%s?%s" "stylesheets/mf_search.css" $buildnum | relURL }}">
         {{- end }}
@@ -92,16 +93,16 @@
         {{- end }}
     {{- end}}
     
-    <script src="https://js.cybozu.com/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{{ "javascripts/js.cookie.js" | relURL }}"></script>
-    <script src="https://js.cybozu.com/jstree/3.3.11/jstree.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.11/jstree.min.js"></script>
     <script src="{{ "javascripts/zoom.js" | relURL }}"></script>
     <script src="{{ printf "%s?%s" "javascripts/application.js" $buildnum | relURL }}"></script>
-    {{- if eq $.Site.Params.meganav true }}
+    {{- if eq .Site.Params.meganav true }}
     <script src="{{ printf "%s?%s" "javascripts/meganav.js" $buildnum | relURL }}"></script>
     {{- end }}
-    {{- if eq $.Site.Params.google_search true }}
-    <script src="https://js.cybozu.com/vuejs/v2.6.12/vue.min.js"></script>
+    {{- if and (eq .Params.type "search_result") (eq .Site.Params.google_search true) }}
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
     {{- end }}
     
     <!-- Google Tag Manager -->
