--- a/static/stylesheets/custom_general.css
+++ b/static/stylesheets/custom_general.css
@@ -3,19 +3,19 @@
   width: 300px;
 }
 .logo-img {
-  width: 200px;
-  height: 56px;
-  padding: 15px 9px 7px 9px;
+  width: 180px;
+  height: 35px;
+  padding: 0;
 }
 .logo-product {
   display: none;
 }
 .logo-title {
   padding-left: 0;
-  font-size: 1.7em;
-  line-height: 1.6em;
+  font-size: 24px;
+  line-height: 24px;
   color: #333;
 }
 .logo-title:lang(en) {
-  font-size: 2em;
+  font-size: 20px;
 }
