--- a/static/stylesheets/custom_mw.css
+++ b/static/stylesheets/custom_mw.css
@@ -44,7 +44,7 @@ a,
 .mega-nav {
     background-color: #f8c5c5;
 }
-.mega-item.current {
+.mega-tab.current {
     background-color: #ff8e8e;
 }
 
@@ -118,18 +118,17 @@ a,
         width: 350px;
     }
 
+    .header .search-wrap {
+        width: calc(100% - 200px);
+        right: 0;
+    }
+    
     .g-col {
         width: 25%;
     }
     
     .subnavi {
         padding-bottom: 100px;
-    }
-}
-
-@media only screen and (min-width: 1059px) {
-    .col-tile-gr {
-        width: 23%;
     }
 }
 
