--- a/static/stylesheets/search_result.css
+++ b/static/stylesheets/search_result.css
@@ -2,11 +2,22 @@
   display:none;
 }
 
+.header {
+    height: 56px;
+}
+    
 .header .wrapper {
     justify-content: space-between;
 }
-
+.header::before {
+    top: 52px;
+}
+    
 body { overflow-y: scroll; }
+
+.g-nav {
+    margin: 64px auto .2em;
+}
 
 .page {
     flex-direction: column;
@@ -24,6 +35,7 @@ body { overflow-y: scroll; }
     width: 100%;
     min-width: 320px;
     padding-bottom: 10px;
+    margin-top: 8px;
 }
 
 .article {
@@ -211,7 +223,7 @@ body { overflow-y: scroll; }
 }
 
 .items {
-    font-size: 13px;
+    font-size: .9em;
     padding: 10px 0 10px 0;
 }
 
